add log config and player controllers for test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=INFO
+logging.file=D:/log/myapp.log
 
+logging.group.javadevjournal=com.javadevjournal.controller, com.javadevjournal.service, com.javadevjournal.util
+#We are setting logging level for group using one line.
+logging.level.javadevjournal=TRACE
