--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,21 @@
+spring.database.url=jdbc:postgresql:nbahoh
+endpoints.enabled=false
+endpoints.metrics.enabled=true
+endpoints.info.enabled=true
+endpoints.restart.enabled=true
+logging.level.org.hibernate.SQL=INFO
+logging.level.org.hibernate.type=INFO
+endpoints.loggers.enabled=false
+endpoints.loggers.web.enabled=false
+logging.level.org.springframework.boot=ERROR
+
+
+#spring.jpa.properties.hibernate.hbm2ddl.auto=create
+#spring.datasource.url=jdbc:h2:file:./nbahoh
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/console
+
+# Console logs cfg
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=INFO
 logging.file=D:/log/myapp.log
