--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.org.springframework.boot=ERROR
 #spring.jpa.properties.hibernate.hbm2ddl.auto=create
 #spring.datasource.url=jdbc:h2:file:./nbahoh
 #spring.h2.console.enabled=true
-#spring.h2.console.path=/console
+spring.console.path=/console
 
 # Console logs cfg
 logging.level.org.springframework.web=DEBUG
