--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
-spring.database.url=jdbc:postgresql:nbahoh
-endpoints.enabled=false
-endpoints.metrics.enabled=true
-endpoints.info.enabled=true
-endpoints.restart.enabled=true
-logging.level.org.hibernate.SQL=INFO
-logging.level.org.hibernate.type=INFO
-endpoints.loggers.enabled=false
-endpoints.loggers.web.enabled=false
-logging.level.org.springframework.boot=ERROR
+#spring.database.url=jdbc:postgresql:nbahoh
+#endpoints.enabled=false
+#endpoints.metrics.enabled=true
+#endpoints.info.enabled=true
+#endpoints.restart.enabled=true
+#logging.level.org.hibernate.SQL=INFO
+#logging.level.org.hibernate.type=INFO
+#endpoints.loggers.enabled=false
+#endpoints.loggers.web.enabled=false
+#logging.level.org.springframework.boot=ERROR
 
 
 #spring.jpa.properties.hibernate.hbm2ddl.auto=create
-#spring.datasource.url=jdbc:h2:file:./nbahoh
+spring.datasource.url=jdbc:postgresql:nbahoh
 #spring.h2.console.enabled=true
-spring.console.path=/console
+#spring.console.path=/console
 
 # Console logs cfg
 logging.level.org.springframework.web=DEBUG
