--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 #logging.level.org.springframework.boot=ERROR
 
 
-#spring.jpa.properties.hibernate.hbm2ddl.auto=create
+spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.datasource.url=jdbc:postgresql:nbahoh
 #spring.h2.console.enabled=true
 #spring.console.path=/console
@@ -23,3 +23,7 @@ logging.file=D:/log/myapp.log
 logging.group.javadevjournal=com.javadevjournal.controller, com.javadevjournal.service, com.javadevjournal.util
 #We are setting logging level for group using one line.
 logging.level.javadevjournal=TRACE
+
+flyway.baseline-on-migrate=true
+flyway.url: jdbc:postgresql:nbahoh
+flyway.user: koder
