remove duub config option and make change in migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 #logging.level.org.springframework.boot=ERROR
 
 
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+#spring.jpa.properties.hibernate.hbm2ddl.auto=false
 spring.datasource.url=jdbc:postgresql:nbahoh
 #spring.h2.console.enabled=true
 #spring.console.path=/console
@@ -18,7 +18,7 @@ spring.datasource.url=jdbc:postgresql:nbahoh
 # Console logs cfg
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=INFO
-logging.file=D:/log/myapp.log
+#logging.file=D:/log/myapp.log
 
 logging.group.javadevjournal=com.javadevjournal.controller, com.javadevjournal.service, com.javadevjournal.util
 #We are setting logging level for group using one line.
