--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 #logging.level.org.springframework.boot=ERROR
 
 
-#spring.jpa.properties.hibernate.hbm2ddl.auto=false
+spring.jpa.properties.hibernate.hbm2ddl.auto=create
 spring.datasource.url=jdbc:postgresql:nbahoh
 #spring.h2.console.enabled=true
 #spring.console.path=/console
