--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,8 @@ logging.group.javadevjournal=com.javadevjournal.controller, com.javadevjournal.s
 #We are setting logging level for group using one line.
 logging.level.javadevjournal=TRACE
 
+
+#jdbc:postgresql://localhost:5432/nbahoh
 flyway.baseline-on-migrate=true
 flyway.url: jdbc:postgresql:nbahoh
 flyway.user: koder
