--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #for production (heroku) = false, cause restart serwer running migration and data is cleared
 spring.flyway.enabled=false
 
-spring.jpa.properties.hibernate.hbm2ddl.auto=create
+#if this is "create" flyway on restart server will be clear databse
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.datasource.url=jdbc:postgresql:nbahoh
 
 # Console logs cfg
