refactorize migration order add user entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #for production (heroku) = false, cause restart serwer running migration and data is cleared
-spring.flyway.enabled=false
+spring.flyway.enabled=true
 
 #if this is "create" flyway on restart server will be clear databse
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
